--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,11 @@
-hey
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8"/>
+    <title>Roxanne</title>
+  </head>
+  <body>
+
+    <script src="/scripts/index.js"></script>
+  </body>
+</html>
