draws current temp on an interval

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title>Roxanne</title>
   </head>
   <body>
-
+    <div data-output=""></div>
     <script src="/scripts/index.js"></script>
   </body>
 </html>
