--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <div data-output=""></div>
+    <script src="/scripts/d3.min.js"></script>    
     <script src="/scripts/index.js"></script>
   </body>
 </html>
