changes to line graph

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8"/>
     <title>Roxanne</title>
+    <link href="/stylesheets/index.css" rel="stylesheet"/>
   </head>
   <body>
     <div data-output=""></div>
